--- a/app/assets/stylesheets/schools.scss
+++ b/app/assets/stylesheets/schools.scss
@@ -25,6 +25,14 @@ label {
   font-size: 1.2em;
 }
 
+.search-form h4 {
+  font-size: 1.3em;
+}
+
+.no-data {
+  font-style: italic;
+}
+
 .school-search .results .ui-widget-content {
   background: #fff;
   font-size: 1em;
